osa2 - puhelinluettelo step7-8

--- a/osa2/puhelinluettelo/src/index.css
+++ b/osa2/puhelinluettelo/src/index.css
@@ -1,5 +1,26 @@
 body {
+  font-family: sans-serif;
+  line-height: 1.5;
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+}
+
+button, input {
+  border-width: 1px;
+  border-style: solid;
+  border-color: cadetblue;
+  appearance: none;
+  font: inherit;
+  padding: 0.25em .5em;
+  margin: 0 .5em .25em 0;
+}
+button:focus,
+input:focus {
+  outline: 1px dashed cadetblue;
+}
+button:focus {
+  outline-offset: 1px;
+}
+input:focus {
+  outline-offset: -3px;
 }
