--- a/osa2/puhelinluettelo/src/index.css
+++ b/osa2/puhelinluettelo/src/index.css
@@ -1,3 +1,18 @@
+:root {
+  box-sizing: border-box;
+  --shadow: 0 .1em .5em -.1em #0002;
+}
+
+*, *::after, *::before {
+  box-sizing: inherit;
+}
+
+html {
+  padding-bottom: 2rem;
+  position: relative;
+  min-height: 100vh;
+}
+
 body {
   font-family: sans-serif;
   line-height: 1.5;
@@ -14,13 +29,65 @@ button, input {
   padding: 0.25em .5em;
   margin: 0 .5em .25em 0;
 }
+
+button {
+  box-shadow: var(--shadow);
+}
+
+input:not([type='checkbox']):not([type='radio']):not([type='button']) {
+  box-shadow: inset var(--shadow);
+}
+
 button:focus,
 input:focus {
   outline: 1px dashed cadetblue;
 }
+
 button:focus {
   outline-offset: 1px;
 }
+
 input:focus {
   outline-offset: -3px;
+}
+
+h1, h3 {
+  font-weight: 300;
+}
+
+.contacts {
+  margin: 0 auto;
+  max-width: 30em;
+}
+
+.contacts__new {
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.contacts__new h3 {
+  flex: 0 0 100%;
+}
+
+.form-control {
+  display: flex;
+  flex-flow: column nowrap;
+  flex: 1 0 auto;
+}
+
+.notification {
+  background-clip: content-box;
+  border: 2px dashed;
+  display: flex;
+  justify-content: center;
+}
+
+.notification--error {
+  background-color: salmon;
+  border-color: salmon;
+}
+
+.notification--confirm {
+  background-color: yellowgreen;
+  border-color: yellowgreen;
 }
